fixed: overflow scroll removed on smaller viewports for better UX

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -483,6 +483,11 @@ a
     #mapCanvas{
         display: none;
     }
+    .searchVenueContainer{
+    padding: 0;
+    height: 100%;
+    overflow-y: initial;
+}
 
 }
 /* ************************************************* */
